# text_encoding

./: Cargo.toml  LICENSE.md  README.md  build.rs
encoding_tables/: big5_2003.txt  big5_hkscs.txt  big5_whatwg.txt  index-iso-8859-9.txt  shiftjis_whatwg.txt
encoding_tables/single_byte/: generate_ascii_ext_tables.py  generate_tables.py  index-iso-8859-1.txt  index-tis-620.txt
encoding_tables/single_byte/ascii_ext/: ibm-cp866.txt  mac-cyrillic.txt  mac-roman.txt
encoding_tables/whatwg/: generate_big5.py  generate_shiftjis.py
examples/: wrapper.rs
src/: ascii.rs  big5.rs  big5_whatwg.rs  lib.rs  shiftjis_whatwg.rs  single_byte.rs  utf16_be.rs  utf16_le.rs  utf32_be.rs  utf32_le.rs  utf8.rs
tests/: big5.rs  property_tests.proptest-regressions  property_tests.rs  shiftjis.rs
tests/test_data/: big5_whatwg_test_decode_2.txt  big5_whatwg_test_decode_in.txt  big5_whatwg_test_encode_in.txt  big5_whatwg_test_encode_out.txt
tests/test_data/whatwg/: big5_whatwg_test_decode_in.txt  big5_whatwg_test_decode_out.txt  big5_whatwg_test_encode_in.txt  big5_whatwg_test_encode_out.txt  shiftjis_whatwg_test_decode_in.txt  shiftjis_whatwg_test_decode_out.txt  shiftjis_whatwg_test_encode_in.txt  shiftjis_whatwg_test_encode_out.txt
